gcc/testsuite/rust/rustc/ui/parser/doc-inside-trait-item.rs
trait User{
    fn test();
    /// empty doc
// { dg-error ".E0584." "" { target *-*-* } .-1 }
}
fn main() {}

